// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function buildTheme it should return the parsed natura light theme with missing values: Natura Light Theme With Missing Values 1`] = `
Object {
  "animation": Object {
    "scale": 1,
  },
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "badgeBorderRadius": 100,
  "buttonSizes": Object {
    "large": Object {
      "minHeight": 48,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    },
    "medium": Object {
      "minHeight": 40,
      "paddingBottom": 12,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 12,
    },
    "small": Object {
      "minHeight": 32,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    },
  },
  "colors": Object {
    "accent": "#03dac4",
    "backdrop": "rgba(0, 0, 0, 0.5)",
    "background": "rgba(0, 0, 0, 0.5)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "error": "#B00020",
    "link": "#227BBD",
    "notification": "#f50057",
    "onBackground": "#000000",
    "onSurface": "#000000",
    "placeholder": "rgba(0, 0, 0, 0.54)",
    "primary": "#6200ee",
    "secondary": "#03dac4",
    "success": "#569A32",
    "surface": "#ffffff",
    "text": "#000000",
    "textHint": "#BBBBBB",
    "textSecondary": "#777777",
    "warning": "#FCC433",
  },
  "dark": false,
  "fonts": Object {
    "light": Object {
      "fontFamily": "System",
      "fontWeight": "300",
    },
    "medium": Object {
      "fontFamily": "System",
      "fontWeight": "500",
    },
    "regular": Object {
      "fontFamily": "System",
      "fontWeight": "400",
    },
    "thin": Object {
      "fontFamily": "System",
      "fontWeight": "100",
    },
  },
  "roundness": 4,
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 16,
      "fontWeight": 400,
    },
    "body2": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 14,
      "fontWeight": 400,
    },
    "button": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 14,
      "fontWeight": 600,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 12,
      "fontWeight": 400,
    },
    "h1": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 96,
      "fontWeight": 300,
    },
    "h2": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 60,
      "fontWeight": 300,
    },
    "h3": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 48,
      "fontWeight": 400,
    },
    "h4": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 34,
      "fontWeight": 400,
    },
    "h5": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 24,
      "fontWeight": 400,
    },
    "h6": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 20,
      "fontWeight": 600,
    },
    "overline": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 12,
      "fontWeight": 400,
      "textTransform": "uppercase",
    },
    "subtitle1": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 16,
      "fontWeight": 400,
    },
    "subtitle2": Object {
      "fontFamily": "\\"System\\", sans-serif",
      "fontSize": 14,
      "fontWeight": 500,
    },
  },
}
`;

exports[`Function buildTheme it should return the parsed natura light theme: Natura Light Theme 1`] = `
Object {
  "animation": Object {
    "scale": 1,
  },
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "badgeBorderRadius": 100,
  "buttonSizes": Object {
    "large": Object {
      "minHeight": 48,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    },
    "medium": Object {
      "minHeight": 40,
      "paddingBottom": 12,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 12,
    },
    "small": Object {
      "minHeight": 32,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    },
  },
  "colors": Object {
    "accent": "#FF6B0B",
    "backdrop": "rgba(0, 0, 0, 0.5)",
    "background": "#FFFFFF",
    "disabled": "#EEEEEE",
    "error": "#E74627",
    "link": "#227BBD",
    "notification": "#f50057",
    "onBackground": "#333333",
    "onSurface": "#777777",
    "placeholder": "#BBBBBB",
    "primary": "#F4AB34",
    "secondary": "#FF6B0B",
    "success": "#569A32",
    "surface": "#FAFAFA",
    "text": "#333333",
    "textHint": "#BBBBBB",
    "textSecondary": "#777777",
    "warning": "#FCC433",
  },
  "dark": false,
  "fonts": Object {
    "light": Object {
      "fontFamily": "System",
      "fontWeight": "300",
    },
    "medium": Object {
      "fontFamily": "System",
      "fontWeight": "500",
    },
    "regular": Object {
      "fontFamily": "System",
      "fontWeight": "400",
    },
    "thin": Object {
      "fontFamily": "System",
      "fontWeight": "300",
    },
  },
  "roundness": 4,
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontFamily": "System",
      "fontSize": 16,
      "fontWeight": 400,
    },
    "body2": Object {
      "fontFamily": "System",
      "fontSize": 14,
      "fontWeight": 400,
    },
    "button": Object {
      "fontFamily": "System",
      "fontSize": 14,
      "fontWeight": 600,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "System",
      "fontSize": 12,
      "fontWeight": 400,
    },
    "h1": Object {
      "fontFamily": "System",
      "fontSize": 96,
      "fontWeight": 300,
    },
    "h2": Object {
      "fontFamily": "System",
      "fontSize": 60,
      "fontWeight": 300,
    },
    "h3": Object {
      "fontFamily": "System",
      "fontSize": 48,
      "fontWeight": 400,
    },
    "h4": Object {
      "fontFamily": "System",
      "fontSize": 34,
      "fontWeight": 400,
    },
    "h5": Object {
      "fontFamily": "System",
      "fontSize": 24,
      "fontWeight": 400,
    },
    "h6": Object {
      "fontFamily": "System",
      "fontSize": 20,
      "fontWeight": 600,
    },
    "overline": Object {
      "fontFamily": "System",
      "fontSize": 12,
      "fontWeight": 400,
      "textTransform": "uppercase",
    },
    "subtitle1": Object {
      "fontFamily": "System",
      "fontSize": 16,
      "fontWeight": 400,
    },
    "subtitle2": Object {
      "fontFamily": "System",
      "fontSize": 14,
      "fontWeight": 500,
    },
  },
}
`;
